--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       <p>
         从 2019 年 3 月开始，至 2024 年 5
         月，我在广东**纳科技有限公司工作，工作时长约 5 年 2
-        个月。期间，我主要负责公司共享童车、轮椅、陪护床等共享产品的小程序、网页管理平台、安卓管理平台等的界面设计，以及公司宣传方面的平面设计工作。
+        个月。期间，我主要负责公司共享童车、轮椅、陪护床、充电桩等共享产品的小程序、网页管理平台、安卓管理平台等的界面设计，以及公司宣传方面的平面设计工作。
       </p>
 
-      <p>2018 年 9 月，我参加了像素范儿深圳 1 期UI设计的培训。</p>
+      <p>2018 年 9 月，我参加了**范儿深圳 1 期UI设计的培训。</p>
 
-      <p>2018 年 3 月到 2021 年 7 月，我在广东开放大学学习并拿到大专学历。</p>
+      <p>2018 年 3 月到 2021 年 7 月，我在广东**大学学习并拿到大专学历。</p>
 
       <p>
         2015 年 9 月到 2018 年 6 月，我在东莞市*商科技担任平面设计师，工作时长约
